# miniClimate-HPC

./: .gitignore  CMakeLists.txt  README.md  TUTORIAL_HPC.md
.github/workflows/: build.yml
include/: benchmark.hpp  config.hpp  mpi_domain.hpp  solver.hpp  solver_mpi.hpp  solver_openmp.hpp  timer.hpp
scripts/: benchmark_openmp.sh  plot_openmp.py  run_mpi_benchmark.sh  run_openmp_benchmark.sh  submit_mpi.slurm  submit_openmp.slurm
src/: benchmark.cpp  config.cpp  main.cpp  main_old.cpp  mpi_domain.cpp  solver.cpp  solver_mpi.cpp  solver_old.cpp  solver_openmp.cpp
